Делает три логотипа: HTML, CSS, JS

--- a/index.html
+++ b/index.html
@@ -41,12 +41,16 @@
         <ul>
           <li>
             <a href="html-css.html">
-              <img src="img/logo-html.svg" alt="Логотип HTML">
+              <img src="img/icon-html.svg" width="200" height="200" alt="Логотип HTML">
+            </a>
+          </li><li>
+            <a href="html-css.html#css">
+              <img src="img/icon-css.svg"  width="200" height="200"  alt="Логотип CSS">
             </a>
           </li>
           <li>
             <a href="javascript.html">
-              <img src="img/logo-js.svg" alt="Логотип JavaScript">
+              <img src="img/icon-javascript.svg" width="200" height="227" alt="Логотип JavaScript">
             </a>
           </li>
         </ul>
