Заменяет логотип HTML Academy на новый

--- a/html-css.html
+++ b/html-css.html
@@ -590,7 +590,7 @@ h1 {
     <footer>
       <div class="contacts">
         <a class="logo-full" href="https://htmlacademy.ru">
-          <img src="img/logo-full.svg" width="161" height="55" alt="HTML Academy" title="HTML Academy">
+          <img src="img/logo-html-academy.svg" width="161" height="47" alt="HTML Academy" title="HTML Academy">
         </a>
         <div class="social-icons">
           <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
