Обновляет пример форматирования кода

--- a/html-css.html
+++ b/html-css.html
@@ -300,13 +300,16 @@ trim_trailing_whitespace = false</code></pre>
   &lt;/ul&gt;
 &lt;/div&gt;
 
+&lt;p&gt;&lt;a href="#"&gt;В этом репозитории&lt;/a&gt; вы увидите замечательную возможность оптимизацией графикой, а в &lt;a href="#"&gt;этом&lt;/a&gt; оптимизацию шрифтов.&lt;/p&gt;
+&lt;p&gt;Также в &lt;i&gt;тексте&lt;/i&gt; может быть &lt;b&gt;какое-то&lt;/b&gt; выделение.&lt;/p&gt;
+
 &lt;!-- Плохо --&gt;
 &lt;div class="menu"&gt;&lt;ul&gt;
-  &lt;li&gt;&lt;a href=""&gt;Первый&lt;/a&gt;&lt;/li&gt;
   &lt;li&gt;&lt;a href=""&gt;
-    Второй
+    Первый
   &lt;/a&gt;&lt;/li&gt;
-  &lt;li&gt;&lt;a href=""&gt;Третий&lt;/a&gt;&lt;/li&gt;
+  &lt;li&gt;&lt;a href=""&gt;Второй
+  &lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;&lt;/div&gt;
                 </code></pre>
               </figure>
