Правит плохой пример в замещаемых элементах

--- a/html-css.html
+++ b/html-css.html
@@ -467,8 +467,8 @@ trim_trailing_whitespace = false</code></pre>
 &lt;img src="logo.png" alt=""&gt;
 &lt;img src="logo.png" alt="" width="300px" height="150px"&gt;
 &lt;svg xmlns="http://www.w3.org/2000/svg"&gt;&lt;/svg&gt;
-&lt;video src="source/video.mp4" width="400" height="400"&gt;&lt;/video&gt;
-&lt;iframe src="https://maps.google.com" width="400" height="400"&gt;&lt;/iframe&gt;
+&lt;video src="source/video.mp4"&gt;&lt;/video&gt;
+&lt;iframe src="https://maps.google.com"&gt;&lt;/iframe&gt;
 </code></pre>
               </figure>
             </div>
