Меняет HTML-линтер на актуальный

--- a/html-css.html
+++ b/html-css.html
@@ -99,7 +99,7 @@
               <p>При написании кода вам сложно будет запомнить все правила кодгайда. Эту работу стоит отдать роботам.</p>
               <ul>
                 <li>Для поддержания единообразия в коде используйте <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig">EditorConfig</a>.</li>
-                <li>Для HTML используйте <a href="https://github.com/htmlacademy/htmlhint-config-htmlacademy">HTMLHint</a>.</li>
+                <li>Для HTML используйте <a href="https://github.com/htmlacademy/linthtml-config-htmlacademy">linthtml</a>.</li>
                 <li>Для стилей <a href="https://github.com/htmlacademy/stylelint-config-htmlacademy">Stylelint</a>.</li>
               </ul>
               <p>По ссылкам находятся конфигурации Академии для этих инструментов. Конфигурации частично покрывают то, что описано в этом стиле кода, и в них нет ничего, что не описано ниже.</p>
