--- a/html-css.html
+++ b/html-css.html
@@ -451,7 +451,7 @@ trim_trailing_whitespace = false</code></pre>
 
               <ul>
                 <li>У изображений, видео и <code>iframe</code> указаны размеры.</li>
-                <li>о возможности изображениям указываются действительные размеры, так как это улучшает производительность отрисовки страницы: браузер не будет перерисовывать страницу в процессе загрузки и отображения изображения.</li>
+                <li>По возможности изображениям указываются действительные размеры, так как это улучшает производительность отрисовки страницы: браузер не будет перерисовывать страницу в процессе загрузки и отображения изображения.</li>
                 <li>В атрибутах нет единиц измерения.</li>
               </ul>
             </div>
