--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
           <img src="img/logo-html-academy.svg" width="161" height="47" alt="HTML Academy" title="HTML Academy">
         </a>
         <div class="social-icons">
-          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
+          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener">
             Вконтакте
           </a>
-          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank">
+          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank" rel="noopener">
             Facebook
           </a>
-          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank">
+          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank" rel="noopener">
             Twitter
           </a>
-          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank">
+          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener">
             Instagram
           </a>
         </div>
         <div class="github">
-          <a class="github-link" href="https://github.com/htmlacademy" target="_blank">
+          <a class="github-link" href="https://github.com/htmlacademy" target="_blank" rel="noopener">
             GitHub
           </a>
         </div>
