Сопоставит размеры JS-лого с остальными

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </li>
           <li>
             <a href="javascript.html">
-              <img src="img/icon-javascript.svg" width="200" height="227" alt="Логотип JavaScript">
+              <img class="logo-list-js" src="img/logo-js.svg" width="160" height="160" alt="Логотип JavaScript">
             </a>
           </li>
         </ul>
