Чинит target="_blank" (#65)
(cherry picked from commit 9952b013ed8e86f83bb1cbb86105580367c96bc1)

--- a/html-css.html
+++ b/html-css.html
@@ -581,7 +581,7 @@ trim_trailing_whitespace = false</code></pre>
             <div class="chapter-part-col">
               <h3 id="html-validator">Валидность</h3>
               <p>
-                Документ проходит проверку на валидность. Для проверки используется <a href="http://validator.w3.org/nu/" target="_blank">современный валидатор</a>.
+                Документ проходит проверку на валидность. Для проверки используется <a href="http://validator.w3.org/nu/" target="_blank" rel="noopener">современный валидатор</a>.
               </p>
             </div>
           </article>
@@ -1077,21 +1077,21 @@ h1 {
           <img src="img/logo-html-academy.svg" width="161" height="47" alt="HTML Academy" title="HTML Academy">
         </a>
         <div class="social-icons">
-          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
+          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener">
             Вконтакте
           </a>
-          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank">
+          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank" rel="noopener">
             Facebook
           </a>
-          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank">
+          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank" rel="noopener">
             Twitter
           </a>
-          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank">
+          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener">
             Instagram
           </a>
         </div>
         <div class="github">
-          <a class="github-link" href="https://github.com/htmlacademy" target="_blank">
+          <a class="github-link" href="https://github.com/htmlacademy" target="_blank" rel="noopener">
             GitHub
           </a>
         </div>
