--- a/javascript.html
+++ b/javascript.html
@@ -96,7 +96,7 @@
             <div class="chapter-part-col chapter-part-col--full-width">
               <h3 id="indents-spaces-and-hyphens">Отступы, пробелы и переносы</h3>
 
-              <blockquote>Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank">.editorconfig</a> в&nbsp;вашем редакторе.</blockquote>
+              <blockquote>Для правильного форматирования используйте файл <a href="https://github.com/htmlacademy/codeguide/blob/master/.editorconfig" target="_blank" rel="noopener">.editorconfig</a> в&nbsp;вашем редакторе.</blockquote>
 
               <p>Для отступов используются два пробела. Знак табуляции не используется</p>
 
@@ -247,7 +247,7 @@ const bar = [
 
               <p>Запрещено использовать имена переменных, которые используются во внешних областях видимости</p>
 
-              <p>Запрещено называть переменные и свойства <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank">ключевыми словами JS</a></p>
+              <p>Запрещено называть переменные и свойства <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#Keywords" target="_blank" rel="noopener">ключевыми словами JS</a></p>
 
               <p>Запрещено использовать переменные, не объявленные ранее. При использовании переменной, объявленной в другом модуле в глобальной области видимости, нужно обращаться к ней как к свойству объекта <code>window</code></p>
 
@@ -287,7 +287,7 @@ const bar = [
 
               <p>В условиях не используется небезопасное отрицание, например использование <code>!</code> в <code>in</code> или <code>instanceof</code> без скобок</p>
 
-              <p>Запрещено сравнение с <code>NaN</code>. Для проверки, является ли результат операции числовым, нужно использовать <code><a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Number/isNaN" target="_blank">Number.isNaN</a></code></p>
+              <p>Запрещено сравнение с <code>NaN</code>. Для проверки, является ли результат операции числовым, нужно использовать <code><a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Reference/Global_Objects/Number/isNaN" target="_blank" rel="noopener">Number.isNaN</a></code></p>
 
               <p>Запрещено использовать <code>case</code> без <code>break</code> или <code>return</code> в блоках <code>switch</code></p>
 
@@ -555,21 +555,21 @@ for (let i = 0, l = 100; i < l; i++);</code></pre>
           <img src="img/logo-html-academy.svg" width="161" height="47" alt="HTML Academy" title="HTML Academy">
         </a>
         <div class="social-icons">
-          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank">
+          <a class="icon icon-vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener">
             Вконтакте
           </a>
-          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank">
+          <a class="icon icon-fb" href="https://www.facebook.com/htmlacademy" target="_blank" rel="noopener">
             Facebook
           </a>
-          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank">
+          <a class="icon icon-tw" href="https://twitter.com/htmlacademy_ru" target="_blank" rel="noopener">
             Twitter
           </a>
-          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank">
+          <a class="icon icon-ig" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener">
             Instagram
           </a>
         </div>
         <div class="github">
-          <a class="github-link" href="https://github.com/htmlacademy" target="_blank">
+          <a class="github-link" href="https://github.com/htmlacademy" target="_blank" rel="noopener">
             GitHub
           </a>
         </div>
