Исправляет название Академии

--- a/html-css.html
+++ b/html-css.html
@@ -2,14 +2,14 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Стиль кода Академии HTML</title>
+    <title>Стиль кода HTML Academy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@htmlacademy_ru">
     <meta name="twitter:image" content="https://htmlacademy.github.io/codeguide/img/og.png">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://htmlacademy.github.io/codeguide/">
-    <meta property="og:title" itemprop="name" content="Стиль кода Академии HTML">
+    <meta property="og:title" itemprop="name" content="Стиль кода HTML Academy">
     <meta property="og:image" itemprop="image" content="https://htmlacademy.github.io/codeguide/img/og.png">
 
     <link rel="stylesheet" href="css/prism.css">
@@ -27,7 +27,7 @@
       <a href="index.html">
         <img class="logo" src="img/bane.svg" width="300" height="300" alt="HTML Academy" title="HTML Academy">
       </a>
-      <h1>Стиль кода Академии HTML</h1>
+      <h1>Стиль кода HTML Academy</h1>
       <p><a href="https://github.com/htmlacademy/codeguide">github.com/htmlacademy/codeguide</a></p>
     </header>
 
